[package]
name = "libsumatra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsumatracrypt-rs = "0.1.3"
hex = "0.4.3"

git2 = "0.19.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"